# postgresql-snakesystem-api

./: .gitignore  Cargo.toml
.github/workflows/: clear-cache.yaml  clear-cache.yml
src/: main.rs
src/contexts/: crypto.rs  jwt_session.rs
src/docs/: swagger.rs
src/docs/api/: auth.md
src/docs/schema/: cookies.sql  country.sql  lookup_config.sql  sales_person.sql  truncate_table.sql  user_kyc.sql  user_request.sql  users.sql
src/handlers/: auth_handler.rs  data_handler.rs  library_handler.rs  mail_handler.rs  option_handler.rs  user_handler.rs
src/middleware/: crypto.rs  jwt_session.rs  model.rs  redis.rs
src/services/: auth_service.rs  data_service.rs  generic_service.rs  library_service.rs  mail_service.rs  option_service.rs  user_service.rs
src/utils/: validation.rs
templates/: activation.hbs  reset_password.hbs
