[package]
name = "snakesystem-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# DEPENDENCIES SWAGGER UI
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["actix-web"] }

actix-web = "4.3.1"
shuttle-actix-web = "0.54.0"
shuttle-runtime = "0.54.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.26.0", features = ["full"] }
actix-cors = "0.7.1"
jsonwebtoken = "9.3.1"
aes = "0.8.4"
sha2 = "0.10.8"
base64 = "0.22.1"
ctr = "0.9.2"
rand = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
image = "0.25.6"
regex = "1.11.1"
lazy_static = "1.5.0"
chrono-tz = "0.10.3"
handlebars = "6.3.2"
lettre = { version = "0.11.15", features = ["smtp-transport", "builder"] }
once_cell = "1.21.3"
