[package]
name = "snakesystem-api"
version = "1.0.0"
edition = "2021"

[dependencies]
# DEPENDENCIES SWAGGER UI
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

actix-web = "4.3.1"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
actix-cors = "0.7.1"
jsonwebtoken = "9.3.1"
aes = "0.8.4"
sha2 = "0.10.8"
base64 = "0.22.1"
ctr = "0.9.2"
rand = "0.9.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.40", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
image = "0.25.8"
regex = "1.11.2"
lazy_static = "1.5.0"
chrono-tz = "0.10.4"
handlebars = "6.3.2"
lettre = { version = "0.11.18", features = ["smtp-transport", "builder"] }
once_cell = "1.21.3"
redis = { version = "0.32.5", features = ["r2d2", "tokio-native-tls-comp", "connection-manager"] }
oauth2 = "5.0.0"
urlencoding = "2.1.3"